:construction: Fix overflow

--- a/wp-content/themes/commence/style.css
+++ b/wp-content/themes/commence/style.css
@@ -415,7 +415,7 @@ a{
 
 #problem, #better-future{
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 #problem .e-con, #better-future .e-con{
